# CompAIny

./: README.md  company_cli.py  meeting.py  meeting_manager.py  pyproject.toml  sample_data.py
agents/: __init__.py  registry.py
company/: __init__.py  api.py  cli.py  database.py  github_integration.py  models.py  storage.py  test_database.py
github/: models.py  sync.py
models/: __init__.py  meeting.py  team.py  ticket.py
src/ceo/: __init__.py  recruiter.py  task_analyzer.py
src/company/: __init__.py  api.py  cli.py  models.py  store.py
src/examples/: demo.py
src/kpi/: __init__.py  evaluator.py  leaderboard.py  metrics.py
src/mcp/: client.py
src/models/: agent.py  board.py  company.py  enums.py  meeting.py  team.py  ticket.py
src/providers/: __init__.py  github_copilot.py  kilo_gateway.py  ollama.py  openrouter.py
src/tools/: __init__.py  base.py  bash.py  git.py  glob.py  grep.py  read_file.py  workspace.py  write_file.py
src/web/: __init__.py  app.py  routes.py
src/web/templates/: base.html  chat.html  hierarchy.html  index.html  teams.html  tickets.html
src/workflow/: __init__.py  automation.py  triggers.py
tests/: conftest.py  test_agent.py  test_board.py  test_enums.py  test_github_integration.py  test_mcp.py  test_meeting.py  test_providers.py  test_storage.py  test_team.py  test_ticket.py  test_tools.py
